style: fix list item spacing and minor adjustments
Adjusted the layout to ensure consistent spacing in list items by allowing the text container to grow and maintaining a minimum width for the checkbox.
Also made some other minor style adjustments, including font weight and select element styles.

--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,11 @@ h6 {
   letter-spacing: var(--letter-spacing);
 }
 
+select {
+  border: var(--border);
+  border-radius: var(--border-radius);
+}
+
 ul {
   list-style: none;
 }
@@ -122,7 +127,7 @@ ul {
 }
 
 
-/* DEFAULT LIST */
+/* FOCUSED LIST */
 
 .default-list-container {
   flex: 3; 
@@ -130,6 +135,11 @@ ul {
   max-width: 450px; 
   background-color: var(--background-shade);
   border-radius: var(--border-radius);
+}
+
+.list-item-text-container {
+  flex-grow: 1;
+  margin-left: 1rem;
 }
 
 .list-item {
@@ -165,6 +175,7 @@ ul {
   border: var(--border);
   border-radius: 50%;
   width: 1.25rem;
+  min-width: 1.25rem;
   height: 1.25rem;
   position: relative;
 }
@@ -201,11 +212,6 @@ ul {
   opacity: 0.5;
 }
 
-.list-item-del-btn,
-.list-delete-btn {
-  filter: var(--filter);
-}
-
 .list-item-del-btn::before,
 .list-delete-btn::before {
   content: "";
@@ -217,6 +223,13 @@ ul {
   background-size: contain;
   background-repeat: no-repeat;
   margin: 0 auto;
+}
+
+/* ICONS */
+
+.list-item-del-btn,
+.list-delete-btn {
+  filter: var(--filter);
 }
 
 /* LIST MANAGER */
@@ -347,11 +360,6 @@ input.list-item-checkbox:hover {
   max-width: 400px;
 }
 
-select {
-  border: var(--border);
-  border-radius: var(--border-radius);
-}
-
 /* MODAL TEXT STYLING */
 
 label {
@@ -360,5 +368,5 @@ label {
 
 .task-priority-select,
 .task-list-select {
-  font-weight: 400;
+  font-weight: var(--font-weight);
 }
